[tool.poetry]
name = "flycafe"
version = "0.1.0"
description = "Бот для подсчета товара"
authors = ["Konstantin <k1st.volkov@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
aiogram = "^2.25.1"
scikit-learn = "^1.2.2"
numpy = "^1.24.2"
pymorphy2 = "^0.9.1"
psycopg = "^3.1.8"


[tool.poetry.group.dev.dependencies]
black = "^23.1.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
